Mark wrong info

--- a/MathAnalysis/Sem4/Integrals.html
+++ b/MathAnalysis/Sem4/Integrals.html
@@ -141,6 +141,7 @@
         <h3>Формула Гаусса-Остроградского</h3>
         <p>Пусть, $\Omega$ &mdash; область, имеющая кусочно-гладкую границу $\partial \Omega$, $\overline n_0$ &mdash; внешняя нормаль, отнормированная к 1, поле $\overline a (M)$ непрерывно дифференцируемо на $\Omega$. Тогда:<br>
         $\int\int_{\partial \Omega} \overline a \cdot \overline n_0 ds = \int \int \int_\Omega div (\overline a) dx dy dz$</p>
+	<div style='text-decoration:line-through'>
         <h3>Формула Стокса</h3>
         <p>
             $\gamma$ &mdash; замкнутый контур. Тогда: <br>
@@ -148,6 +149,7 @@
             где $D$ область с границей $\gamma$<br>
             *тут дофига опущено, но не до этого
         </p>
+	</div>
         <h3>Поле потенциальное</h3>
         <p>Если нашли $u$ такое, что $\overline F = grad u$, то $u$ &mdash; потенциал</p>
         <p>
